2011-05-23  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r87070.
        http://trac.webkit.org/changeset/87070
        https://bugs.webkit.org/show_bug.cgi?id=61285

        broke resource-parameters.html on win, weird failures on wk2
        (Requested by caseq on #webkit).

        * http/tests/inspector/network/network-size.html:
        * http/tests/inspector/resource-har-conversion-expected.txt:
        * http/tests/inspector/resource-har-conversion.html:
        * http/tests/inspector/resource-har-headers-expected.txt: Removed.
        * http/tests/inspector/resource-har-headers.html: Removed.
        * http/tests/inspector/resource-parameters-expected.txt:
        * http/tests/inspector/resources-test.js:

2011-05-23  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Darin Adler.

        WebKitTestRunner needs layoutTestController.setJavaScriptCanAccessClipboard
        https://bugs.webkit.org/show_bug.cgi?id=42669

        Unskip test case due to the implementation setJavaScriptCanAccessClipboard in WebKitTestRunner.

        * platform/mac-wk2/Skipped:
        * platform/qt-wk2/Skipped:

2011-05-18  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: source mapping for pretty-printed scripts is sometimes inaccurate after indented comments.
        https://bugs.webkit.org/show_bug.cgi?id=61037

        * http/tests/inspector/inspector-test.js:
        (initialize_InspectorTest):
        * inspector/debugger/resources/obfuscated.js:
        (withComments):
        * inspector/debugger/script-formatter.html:

2011-05-23  Mike West  <mkwst@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: Missing fields in HAR
        https://bugs.webkit.org/show_bug.cgi?id=58127

        Setting correct expectations for the following fields newly added to
        the HAR implementation:
        - entry.request.httpVersion
        - entry.request.headersSize