@@ -1,3 +1,15 @@
+2011-05-23  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Reviewed by Tony Chang.
+
+        Style visibility: hidden on <br/> tags causes input fields to lose focus after deleting all content
+        https://bugs.webkit.org/show_bug.cgi?id=45889
+
+        Add a regression test now that the bug has been fixed by r87067.
+
+        * fast/forms/delete-text-with-invisible-br-expected.txt: Added.
+        * fast/forms/delete-text-with-invisible-br.html: Added.
+
 2011-05-23  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r87070.
